--- a/src/components/PropertyDetail.scss
+++ b/src/components/PropertyDetail.scss
@@ -1,6 +1,7 @@
-/* --- VARIABELEN (Matchen met je App.scss) --- */
+/* --- VARIABELEN --- */
 $color-dark: #22223B;
 $color-medium: #4A4E69;
+$color-muted: #9A8C98; // Deze ontbrak en veroorzaakte de fout!
 $color-light: #F2E9E4;
 $white: #FFFFFF;
 $black: #000000;
